--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <a href="#skills" class="hover:text-indigo-600">Skills</a>
             <a href="#blog" class="hover:text-indigo-600">Blog</a>
             <a href="#contact" class="hover:text-indigo-600">Contact</a>
-            <a href="https://github.com/" target="_blank" aria-label="GitHub">🐙</a>
-            <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">🔗</a>
+            <a href="https://github.com/" target="_blank" aria-label="GitHub">🖥️</a>
+            <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">💼</a>
             <button id="darkToggle" class="ml-4">🌙</button>
           </nav>
         </div>
@@ -99,13 +99,13 @@
       <section class="pt-32 pb-20 bg-gradient-to-br from-indigo-500 to-purple-600 text-white">
         <div class="max-w-7xl mx-auto px-6 md:px-16 flex flex-col md:flex-row items-center gap-10">
           <div class="flex-1 text-center md:text-left" data-aos="fade-right">
-            <h2 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm Mukund</h2>
-            <span class="text-2xl md:text-3xl font-mono" id="typed"></span>
-            <p class="mt-4">I build practical, beautiful, and scalable tech solutions.</p>
-            <a href="/resume.pdf" download class="mt-6 inline-block px-6 py-2 bg-white text-indigo-700 font-semibold rounded-full shadow hover:bg-gray-200">Download Resume</a>
+            <h2 class="text-4xl md:text-5xl font-bold mb-4">👋 Hi , I'm Mukund !</h2>
+            <span class="text-2xl md:text-3xl" id="typed"></span>
+            <p class="mt-4">I'm passionate about building intelligent systems that solve real-world problems. I love working on data-driven projects, crafting clean UIs, and learning through hands-on experimentation.</p>
+            <a href="Resume_Mukund_Ahire.pdf" download class="mt-6 inline-block px-6 py-2 bg-white text-indigo-700 font-semibold rounded-full shadow hover:bg-gray-200">Download Resume</a>
           </div>
           <div class="flex-1" data-aos="fade-left">
-            <img src="avatar.jpg" alt="Mukund Avatar" class="rounded-full shadow-xl mx-auto" height="10"/>
+            <img src="hero.png" alt="Mukund Avatar" class="rounded-full shadow-xl mx-auto" width="300px"/>
           </div>
         </div>
       </section>
@@ -114,7 +114,7 @@
       <section id="about" class="px-6 md:px-16 py-16" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-6 border-b-4 border-indigo-500 inline-block">About Me</h2>
         <p class="text-lg max-w-3xl">
-          I'm a final-year IT student at Savitribai Phule Pune University, passionate about backend development and intelligent systems. My projects focus on solving real-world problems using Java, Python, Firebase, and AI tools.
+          Driven and adaptable technology professional, always eager to learn and embrace new challenges. I excel at solving complex problems and building innovative solutions that make a lasting impact. With a relentless passion for continuous growth, I stay ahead of the curve in emerging technologies. My journey is defined by creativity, perseverance, and a commitment to transforming ideas into reality. Let's connect and explore opportunities to drive meaningful change in the world of technology.
         </p>
       </section>
 
@@ -123,16 +123,23 @@
         <h2 class="text-3xl font-bold mb-6 border-b-4 border-indigo-500 inline-block">Projects</h2>
         <div class="grid md:grid-cols-2 gap-8">
           <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg p-6 hover:shadow-xl transition duration-300">
-            <h3 class="text-xl font-semibold mb-2">🎮 Time Loop Puzzle Game</h3>
-            <p class="text-gray-700 dark:text-gray-300">A 2D puzzle game using ghost mechanics built in Python.</p>
-            <p class="text-sm mt-2">Tech Stack: Python, Pygame</p>
+            <h3 class="text-xl font-semibold mb-2">📈 What I’m Working On</h3>
+            <p class="text-gray-700 dark:text-gray-300">
+                <li>🤖 AI-based urban intelligence platform (CitySense 🌆)</li>
+                <li>🎯 Building ML models for predictive analytics</li>
+                <li>🌐 Designing personal portfolio and microservices with React + Firebase</li>
+                <li>🖥️ Tech Stack: React, Firebase, Gemini AI</li></p><br>
             <a href="#" class="text-indigo-600 dark:text-indigo-400">View on GitHub →</a>
           </div>
           <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg p-6 hover:shadow-xl transition duration-300">
-            <h3 class="text-xl font-semibold mb-2">📊 CitySense</h3>
-            <p class="text-gray-700 dark:text-gray-300">Urban intelligence dashboard for real-time civic data in Bengaluru.</p>
-            <p class="text-sm mt-2">Tech Stack: React, Firebase, Gemini AI</p>
-            <a href="#" class="text-indigo-600 dark:text-indigo-400">View on GitHub →</a>
+            <h3 class="text-xl font-semibold mb-2">📊 House Price Prediction</h3>
+            <p class="text-gray-700 dark:text-gray-300">
+                <li>🔍 Real-world housing data preprocessing</li>
+                <li>📊 Exploratory Data Analysis & visualization</li>
+                <li>📈 Linear Regression with RMSE evaluation</li>
+                <li>🛠️ Tech: Python, Pandas, Scikit-learn, Jupyter</li>
+            </p><br>
+            <a href="https://github.com/mukund-ahire/House-Price-Prediction" class="text-indigo-600 dark:text-indigo-400">View on GitHub →</a>
           </div>
         </div>
       </section>
@@ -158,7 +165,7 @@
             <span class="text-sm">React</span>
           </div>
           <div class="flex flex-col items-center bg-white dark:bg-gray-800 rounded-xl shadow-md p-4 transition-transform hover:scale-105 hover:shadow-xl">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" alt="Tailwind CSS" class="w-12 h-12 mb-2">
+            <img src="https://www.vectorlogo.zone/logos/tailwindcss/tailwindcss-icon.svg" alt="Tailwind CSS" class="w-12 h-12 mb-2">
             <span class="text-sm">Tailwind CSS</span>
           </div>
         </div>
@@ -238,7 +245,7 @@
       if (darkToggleMobile) darkToggleMobile.addEventListener('click', toggleTheme);
 
       new Typed('#typed', {
-        strings: ['Final-year IT student', 'Java Developer', 'Problem Solver', 'Tech Explorer'],
+        strings: ['Final-year IT Student.', 'Aspiring AI Engineer.', 'Problem Solver.', 'Tech Explorer.'],
         typeSpeed: 50,
         backSpeed: 25,
         backDelay: 2000,
