--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
         }
       }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TV819NQMBR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TV819NQMBR');
+    </script>
+    
     </head>
   <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 font-sans">
 
