--- a/index.html
+++ b/index.html
@@ -254,6 +254,21 @@
           <div class="text-center">
             <h2 class="text-3xl sm:text-4xl font-bold mb-12 border-b-4 border-indigo-500 inline-block">🚀 Projects</h2>
           </div>
+          <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg p-6 flex flex-col hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
+            <h3 class="text-xl font-semibold mb-2">Portfolio Website</h3>
+            <p class="text-gray-700 dark:text-gray-300 mb-4">
+              Designed and developed a modern, responsive portfolio using HTML5, CSS3, JavaScript, and Tailwind CSS. Integrated EmailJS for contact form functionality, Cloudflare for CDN & security, and GitHub Pages for hosting.
+            </p>
+            <a href="https://github.com/mukund-ahire/Portfolio-Website" class="text-indigo-600 dark:text-indigo-400 font-semibold mt-auto">View on GitHub →</a>
+          </div>
+          
+          <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg p-6 flex flex-col hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
+            <h3 class="text-xl font-semibold mb-2">Library Management System</h3>
+            <p class="text-gray-700 dark:text-gray-300 mb-4">
+              Built a Java-based library management system with MySQL database integration for efficient book tracking, member management, and transaction logging. Features include book search, issue/return records, and user authentication.
+            </p>
+            <a href="https://github.com/mukund-ahire/Library-Management-System" class="text-indigo-600 dark:text-indigo-400 font-semibold mt-auto">View on GitHub →</a>
+          </div>
           <div class="grid md:grid-cols-2 gap-8 max-w-7xl mx-auto">
             <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg p-6 flex flex-col hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
               <h3 class="text-xl font-semibold mb-2">Time Loop Game with Amazon-Q-CLI</h3>
@@ -484,4 +499,5 @@
       // === END OF NEW JAVASCRIPT ===
     </script>
   </body>
+
 </html>
